canadensis_dsdl_frontend/tests/compile_fail/empty_union/canadensis/EmptyUnion.1.0.uavcan
@union
# No fields (two are required)

@sealed
